<resources>
    <string name="app_name">오늘 밥 뭐더라?</string>
    <string name="before">전날</string>
    <string name="next">다음날</string>
    <string name="morning">조식</string>
    <string name="lunch">중식</string>
    <string name="dinner">석식</string>
    <string name="campus">캠퍼스</string>
    <string name="menu">정보</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="todo">TODO</string>
    <string name="notification">Notification 버튼</string>
    <string name="_12_03">12월 03일</string>
    <string name="rest_naem">기숙사 식당</string>
    <string name="campus_name">천안</string>
    <string name="share_icon_des">식단 공유</string>
</resources>